--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                   </div>
                   <div class="tarjeta__action">
                     <button class="boton video-btn" type="button" data-bs-toggle="modal"
-                      data-src="https://www.youtube.com/embed/Jfrjeg26Cwk" data-bs-target="#myModal">
+                      data-src="https://www.youtube.com/embed/11ciSOieom0?si=bWbC0lLxsrro3Yhb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" data-bs-target="#myModal">
                       <span>Reproducir video</span>
                       <img src="./assets/ico-flecha.svg" />
                     </button>
@@ -80,8 +80,9 @@
                   <div class="contenido__footer__item__text">
                     <h4 class="mb-1">Horas</h4><span>40</span>
                   </div>
-                </div>
+                </div> 
               </div>
+              <!-- 
               <div class="col-lg-auto p-0">
                 <div class="contenido__footer__item py-4">
                   <div class="contenido__footer__item__img me-3"><img src="./assets/ico-duracion.svg"
@@ -91,6 +92,7 @@
                   </div>
                 </div>
               </div>
+              -->
               <div class="col-lg-auto p-0">
                 <div class="contenido__footer__item py-4">
                   <div class="contenido__footer__item__img me-3"><img src="./assets/ico-modalidad.svg"
